--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,3 @@
-/*
-
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
-
-If your plugin does not need CSS, delete this file.
-
-*/
+.now-container > * + * {
+	margin-left: var(--size-4-1);
+}
